--- a/configuration.properties
+++ b/configuration.properties
@@ -1,6 +1,7 @@
 browser=chrome
 
 googleUrl=https://www.google.com/
+automationexerciseUrl=http://automationexercise.com
 
 !==============AMAZON==============
 amazonUrl=https://www.amazon.com
@@ -23,6 +24,6 @@ saucedemoUsername=standard_user
 saucedemoPassword=secret_sauce
 
 !==============BLUERENTALCARS==============
-bluerentalcarsUrl="https://www.bluerentalcars.com/"
-bluerentalcarsEmail="customer@bluerentalcars.com"
-bluerentalcarsPassword="12345"
+bluerentalcarsUrl=https://www.bluerentalcars.com/
+bluerentalcarsEmail=customer@bluerentalcars.com
+bluerentalcarsPassword=12345
